<package>
  <name>gazebo_rtt_plugin</name>
  <version>0.3.1</version>
  <description>gazebo_rtt_plugin allows to load and run <a href="http://www.orocos.org/">Orocos</a> Components as gazebo plugins</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gazebo_rtt_plugin</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>

</package>
