<package>
  <name>hector_gazebo</name>
  <version>0.5.0</version>
  <description>hector_gazebo provides packages related to to simulation of robots using gazebo (gazebo plugins, world files etc.)</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_gazebo_thermal_camera</run_depend>
  <run_depend>hector_gazebo_worlds</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
