<?xml version="1.0"?>
<package format="3">
  <name>hector_gazebo</name>
  <version>0.5.4</version>
  <description>hector_gazebo provides packages related to to simulation of robots using gazebo (gazebo plugins, world files etc.)</description>
  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <!-- NOTE: temporarily desabling hector_gazebo_thermal_camera until plugin migration is complete -->
  <!-- <exec_depend>hector_gazebo_thermal_camera</exec_depend> -->
  <exec_depend>hector_gazebo_worlds</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
