<package>
  <name>hector_sensors_gazebo</name>
  <version>0.5.0</version>
  <description>hector_sensors_gazebo depends on the necessary plugins for using the sensors from the hector_models repository.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_sensors_gazebo</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_sensors_description</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>

</package>
